--- a/t2/folder/index.html
+++ b/t2/folder/index.html
@@ -9,7 +9,7 @@
         <script src="/js/script.js"></script>
 
         <p>lol</p>
-        
+        <h1>Mama ama kriminal</h1>        
     </body>
 
 </html>
