уроки по событиям

--- a/sobitiya/folder/index.html
+++ b/sobitiya/folder/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button id="btn">Нажми на меня</button>
+		<div class="wrapper">
+        	<button id="btn">Нажми на меня</button>
+		</div>
         <button>Нажми на меня</button>
         <button>Нажми на меня</button>
 
@@ -16,7 +18,8 @@
 
 
 
-        <script src="/js.js"></script>
+		<script src="/js.js"></script>
+		<script src="/time.js"></script>
     </body>
 
 </html>
