таймеры события т тд

--- a/sobitiya/folder/index.html
+++ b/sobitiya/folder/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!--
 		<div class="wrapper">
         	<button id="btn">Нажми на меня</button>
 		</div>
@@ -16,10 +17,36 @@
 
         <a href="http://yotube.com">YouTube</a>
 
+        -->
+
+        <button id="moveBox">Move box</button>
+
+        <div class="bigBox">
+            <div class="smallBox"></div>
+        </div>
+
+        <div class="btn-block">
+            <button class="first"></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
+
+
+
+
+
+
+
+
+
+
 
 
 		<script src="/js.js"></script>
-		<script src="/time.js"></script>
+        <script src="/time.js"></script>
     </body>
-
 </html>
