--- a/conventor/index.html
+++ b/conventor/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>Конвентер валют</title>
     <link rel="stylesheet" href="style.css">
-    <title>lol</title>
 </head>
 <body>
-    <button>kek</button>
+    <p>Сюда введите грн</p>
+    <input type="text" id="ua">
+    <P>Сюда введите юсд</P>
+    <input type="text" id="usd">
+
     <script src="/js.js"></script>
+    
 </body>
 </html>
