--- a/interpolyaciya/folder/index.html
+++ b/interpolyaciya/folder/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>lol</title>
+    <title>Интерполяция</title>
 </head>
 <body>
-    <button>kek</button>
+    <button>Нажми на меня</button>
+
     <script src="/js.js"></script>
 </body>
 </html>
