--- a/promise/folder/index.html
+++ b/promise/folder/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
+<header>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>lol</title>
-</head>
+    <title>Promise</title>
+
+</header>
 <body>
-    <button>kek</button>
+    
+
     <script src="/js.js"></script>
 </body>
 </html>
