локалы мини проект

--- a/promise/folder/index.html
+++ b/promise/folder/index.html
@@ -2,10 +2,27 @@
 <html>
 <header>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Promise</title>
+    <title>Мини проект</title>
+    <link rel="stylesheet" href="style.css">
 
 </header>
 <body>
+    <ul>
+        <li>Главная</li>
+        <li id="openAvtoriz">Вход</li>
+        <li>Дичь</li>
+        <li>Дичь</li>
+        <li>Дичь</li>
+        <li class="userBlock">Привет Гость</li>
+    </ul>
+    <div class="formaAvtoriz">
+        <p id="x">x</p>
+        <p>Логин:</p>
+        <input type="text" id="login" value="nevvord">
+        <p>Пароль:</p>
+        <input type="password" id="password" value="0000">
+        <button id="avtorizButton">Войти</button>
+    </div>
     
 
     <script src="/js.js"></script>
